# HStringTemplate

./: HStringTemplate.cabal  HStringTemplate.cabal.~0~  hstringtemplate.cabal
Text/: StringTemplate.hs
Text/StringTemplate/: Base.hs  Classes.hs  Generic.hs  GenericStandard.hs  GenericWithClass.hs  Group.hs  Instances.hs  QQ.hs  Renderf.hs
tests/: Main.hs  Properties.hs  Units.hs
