name:                HStringTemplate
version:             0.1
synopsis:            StringTemplate implementation in Haskell.
description:         A port of the Java library by Terrence Parr.
category:            Text
license:             BSD3
license-file:        LICENSE
author:              Sterling Clover
maintainer:          s.clover@gmail.com
Tested-With:         GHC ==6.6.1
Build-Type:          Simple
build-Depends:       base
Cabal-Version:       >= 1.2

flag small-base

library
  if flag(small-base)
    build-depends:     base >= 3, filepath, parsec, containers, pretty, old-time, bytestring
  else
    build-depends:     base < 3, filepath, parsec
  exposed-modules:   Text.StringTemplate
                     Text.StringTemplate.Base
                     Text.StringTemplate.Classes
                     Text.StringTemplate.Instances
  ghc-options:       -Wall -O2 -optc-O3