name:                HStringTemplate
version:             0.7.4
synopsis:            StringTemplate implementation in Haskell.
description:         A port of the Java library by Terrence Parr.
category:            Text
license:             BSD3
license-file:        LICENSE
author:              Sterling Clover
maintainer:          s.clover@gmail.com
Tested-With:         GHC == 7.8.3
Build-Type:          Simple
build-Depends:       base
Cabal-Version:       >= 1.6


library

  build-depends:   syb, base >= 4, base < 5, filepath, parsec < 4, containers, pretty >= 1.1.0.0,
                   time < 1.6, old-time < 1.2, old-locale < 1.1, bytestring, directory, array, text, deepseq, utf8-string, blaze-builder, void, template-haskell >= 2.3, mtl

  exposed-modules:   Text.StringTemplate
                     Text.StringTemplate.Base
                     Text.StringTemplate.Classes
                     Text.StringTemplate.GenericStandard
                     Text.StringTemplate.QQ
  other-modules:     Text.StringTemplate.Instances
                     Text.StringTemplate.Group
                     Text.StringTemplate.Renderf
  ghc-options:       -Wall

source-repository head
  type:     darcs
  location: http://hub.darcs.net/sterlingclover/hstringtemplate
